--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  equatable: ^2.0.7
+  get_it: ^8.0.3
+  internet_connection_checker: ^3.0.1
+  bloc_test: ^10.0.0
+  either_dart: ^1.0.0
+  dio: ^5.8.0+1
+  flutter_dotenv: ^5.2.1
+  json_annotation: ^4.9.0
+  cached_network_image: ^3.4.1
+  mockito: ^5.4.5
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  json_serializable: ^6.9.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
