--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   json_annotation: ^4.9.0
   cached_network_image: ^3.4.1
   mockito: ^5.4.5
+  supabase_flutter: ^2.8.4
 
 dev_dependencies:
   flutter_test:
