--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,15 @@ dependencies:
   bloc_test: ^10.0.0
   either_dart: ^1.0.0
   dio: ^5.8.0+1
-  flutter_dotenv: ^5.2.1
   json_annotation: ^4.9.0
   cached_network_image: ^3.4.1
   mockito: ^5.4.5
   supabase_flutter: ^2.8.4
+  shoes_api:
+    path: shoes_api
+  flutter_bloc: ^9.1.0
+  go_router: ^14.8.1
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +62,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.15
   json_serializable: ^6.9.4
+  mocktail: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -70,33 +75,14 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+      - assets/icons/
+      - assets/fonts/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  fonts: 
+    - family: Caladae
+      fonts:
+        - asset: assets/fonts/Caladea-Regular.ttf
+          weight: 500
+        - asset: assets/fonts/Caladea-Bold.ttf
+          weight: 600
