--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,12 @@ dependencies:
   flutter_bloc: ^9.1.0
   go_router: ^14.8.1
   fluttertoast: ^8.2.12
+  carousel_slider: ^5.0.0
+  readmore: ^3.0.0
+  toastification: ^3.0.2
+  drift: ^2.26.1
+  drift_flutter: ^0.2.4
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +69,7 @@ dev_dependencies:
   build_runner: ^2.4.15
   json_serializable: ^6.9.4
   mocktail: ^1.0.4
+  drift_dev: ^2.26.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
