--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   drift: ^2.26.1
   drift_flutter: ^0.2.4
   path_provider: ^2.1.5
+  mock_supabase_http_client: ^0.0.3+2
 
 dev_dependencies:
   flutter_test:
