--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,10 +56,10 @@ dependencies:
   drift_flutter: ^0.2.4
   path_provider: ^2.1.5
   mock_supabase_http_client: ^0.0.3+2
-  shimmer: ^3.0.0
   permission_handler: ^12.0.0+1
   image_picker: ^1.1.2
   intl: ^0.20.2
+  skeletonizer: ^1.4.3
 
 dev_dependencies:
   flutter_test:
