--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.20.2
   skeletonizer: ^1.4.3
+  country_code_picker: ^3.3.0
 
 dev_dependencies:
   flutter_test:
