--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   intl: ^0.20.2
   skeletonizer: ^1.4.3
   country_code_picker: ^3.3.0
+  flutter_stripe: ^11.5.0
 
 dev_dependencies:
   flutter_test:
