--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
       - assets/icons/
       - assets/fonts/
       - assets/lottie/
+      - assets/videos/
 
   fonts: 
     - family: Caladae
